# bandlimited-cnns

./: .gitignore  .gitmodules  1  README.md  figure2.ipynb
cfft/: CMakeLists.txt  FFT.cpp  FFT.h  FFTTest.cpp  README.md  Utils.cpp  Utils.h  main.cpp
cnns/: BatchNormalization.ipynb  ConvWithFFT.ipynb  ConvolutionalNetworks.ipynb  ConvolutionalNetworks.py  Dropout.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb  PyTorch.py  README.md  README.md~  TensorFlow.ipynb  TensorFlow.py  TensorFlowEagerExecution.py  TensorFlowGpu.py  TensorFlowSpecificModel.py  TensorFlowStanford.py  TimeSeriesConvolutionMaxPoolNeuralNetwork.ipynb  TimeSeriesConvolutionalNetworks.ipynb  matplotlib_backend.py
cuda/: a.out  acc_cuda2  add  add.cpp  add.cu  add_block  add_block.cu  add_cuda  add_cuda.cpp  add_cuda.cpp~  add_cuda.cu  add_cuda.cu~  add_cuda2  add_cuda_threads.cu  add_full.cu~  add_grid  add_grid.cu  add_grid.cu~  debug_cuda.txt  fbcunn_installation.sh  first_cuda.c~  install_folly_fbthrift_thpp_fblualib.sh  simple_cuda.cpp  simple_cuda.cpp~
dtw/: README.md  initial_results_vanilla_dtw.ods
kshape/: NCCc_fourier.m  energy_fourier.m
modules/: cnn_with_spectral_parameterization.py  cnn_with_spectral_pooling.py  create_images.py  frequency_dropout.py  image_generator.py  layers.py  spectral_pool.py  spectral_pool_test.py  utils.py
pytorch_tutorials/: cifar10_tutorial.py  cifar10_tutorial2.py  data_loading_tutorial.ipynb  full_connected.ipynb  memory_net.py  memory_net_alex_1_conv2d.py  memory_net_densenet.py  memory_net_graph.py  memory_net_resnet.py  my_relu.py  my_relu2.py  (+3 more)
(+1317 files in other folders)
